<resources>
    <string name="app_name" translatable="false">Shaurmap</string>
    <string name="action_settings">Settings</string>

    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="title_activity_auth" translatable="false">AuthActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_info">User info</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="display_name_description">Your display name will be visible in comments and reviews</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="delete_photo">Delete photo</string>
    <string name="choose_picture">Choose picture</string>
    <string name="please_wait">Please wait…</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="add_restaurant_confirmation">Add new restaurant?</string>
    <string name="title_add_restaurant">Add new restaurant</string>
    <string name="email_is_not_verified">Email is not verified</string>
    <string name="verify">Verify</string>
    <string name="email_verification_sent">Email verification has been sent</string>
    <string name="restaurant_has_been_added">Restaurant has been added</string>
    <string name="open">Open</string>
    <string name="published_format">Published on %1$s</string>
    <string name="added_format">Added on %1$s</string>
    <string name="taste">Taste</string>
    <string name="service">Service</string>
    <string name="reviews">Reviews</string>
    <string name="rating">Rating</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="submit">Submit</string>
    <string name="rate_this_restaurant">Rate this restaurant</string>
    <string name="posting">Posting…</string>
    <string name="review_has_been_published">Review has been published</string>
    <string name="show_all">Show all</string>
    <string name="refresh">Refresh</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="nothing_here_yet">There\'s nothing here yet</string>
    <string name="comments">Comments</string>
    <string name="post_comment">Post a comment…</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="permission_location_rationale">If you grant permission you can easily access your location</string>
    <string name="permission_can_be_changed_in_settings">"Permissions can be changed in app settings "</string>
    <string name="permissions_location_denied">You won\'t be able to access your location</string>
    <string name="enable_location">You should enable location services</string>
    <string name="no_reviews_yet">There\'s no reviews here yet. Your would be the first</string>
</resources>
