<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/profile"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/ivProfilePictureFullscreen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.2"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/shaurman"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civProfilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:src="@drawable/shaurman"
                    android:layout_gravity="center"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/white"
                    android:fitsSystemWindows="true"/>
            </FrameLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cvUserInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/user_info"/>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toTopOf="@id/tvEmailHint"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="put@in.ua"/>

                        <TextView
                            android:id="@+id/tvEmailHint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/tvEmail"
                            app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

                    </android.support.constraint.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#d3d3d3"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"/>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/clDisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/tvDisplayName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toTopOf="@id/tvDisplayNameHint"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Vladimir Putin"/>

                        <TextView
                            android:id="@+id/tvDisplayNameHint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/tvDisplayName"
                            app:layout_constraintTop_toBottomOf="@id/tvDisplayName"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_edit"
                            android:tint="@android:color/darker_gray"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </android.support.constraint.ConstraintLayout>

                   <!-- <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground" >
                        <TextView
                            android:id="@+id/tvDisplayName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            tools:text="Vladimir Putin"/>
                    </android.support.constraint.ConstraintLayout>-->
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/cvUserInfo">

                todo settings card

            </android.support.v7.widget.CardView>-->

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnUpdateProfilePicture"
        android:src="@drawable/ic_photo_camera"
        android:tint="@color/white"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/spacing_large"
        style="@style/FabStyle"/>

</android.support.design.widget.CoordinatorLayout>
